Filter button padding issue on mobile view

--- a/techdegree/proj10/css/style.css
+++ b/techdegree/proj10/css/style.css
@@ -103,7 +103,7 @@ img {
   -moz-border-radius: 5px;
   border-radius: 5px;
   cursor: pointer;
-  margin: 9em 0 1.5em 0;
+  margin: 11em 0 1.5em 0;
   transition: .3s ease-out;
   font-size: 0.77em;
   text-transform: uppercase;
